--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/pomf.png" />
+    <link rel="icon" type="image/png" href="/3.png" />
     <meta name="viewport" content="initial-scale=1, width=device-width" />
     <title>giantcow.dev</title>
   </head>
